--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\benja\\Documents\\Github\\DigitalSolutions2020\\venv\\Scripts\\python.exe"
+    "python.pythonPath": ".venv\\Scripts\\python.exe"
 }
